--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<title>My first site in 2019 years.</title>
 	<link href = "style.css" rel="stylesheet" type="text/css"/>
-	<script type = 'text/javascript' scr = 'script.js'></script>
+	<script type = 'text/javascript' scr = 'script.js'>
+		aletr ('Yes! :)')
+	</script>
 </head>
 <body>
 	<div class="header">
