--- a/index.html
+++ b/index.html
@@ -5,24 +5,12 @@
 	<title>My first site in 2019 years.</title>
 	<link href = "style.css" rel="stylesheet" type="text/css"/>
 	<script type = 'text/javascript' scr = 'script.js'>
-		aletr ('Yes! :)')
+		alert ('Yes! :)')
 	</script>
 </head>
 <body>
-	<div class="header">
-		<div class = 'yy'>
-			YY
-		</div>
-		
-	</div>
+	<h1>Hello!!!</h1>
 
-	<div class="sidebar">
-		
-	</div>
-
-	<div class="footer">
-		
-	</div>
-
+	<p> fldkfjasd;lfjsda fsldjf;sdalfjs;la fjsdlkfjawp;oi velfjdsfjdlkfj;ld fsdkjfsld;kjfa shflekus hgiwenve aliuvhsduhv s;lfhsdkbwihf iushiuehslinsl dwehf lishfilsdhf ehf scfhuf efldkfjasd;lfjsda fsldjf;sdalfjs;la fjsdlkfjawp;oi velfjdsfjdlkfj;ld fsdkjfsld;kjfa shflekus hgiwenve aliuvhsduhv s;lfhsdkbwihf iushiuehslinsl dwehf lishfilsdhf ehf scfhuf efldkfjasd;lfjsda fsldjf;sdalfjs;la fjsdlkfjawp;oi velfjdsfjdlkfj;ld fsdkjfsld;kjfa shflekus hgiwenve aliuvhsduhv s;lfhsdkbwihf iushiuehslinsl dwehf lishfilsdhf ehf scfhuf e </p>
 </body>
 </html>
